# Decoder

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  a.out  main.cpp
src/: decode.cpp  test.txt
